# libdynemit

./: .gitignore  CMakeLists.txt  README.md
.github/workflows/: ci.yml
bench/: CMakeLists.txt  CMakeLists_feature_compare.txt  benchmark_vector_mul.c  benchmark_vector_mul_feature_compare.c
bench/data/: README.md  results_amd_epyc_7301_avx2.csv  results_amd_epyc_7452_avx2.csv  results_amd_ryzen_9_7900x_avx2.csv  results_amd_ryzen_9_9950x3d_avx_512f.csv  results_intel_core_i9_13900k_avx2.csv  results_intel_i5_10400_avx2.csv  results_intel_xeon_e3_1220_v5_avx2.csv  results_intel_xeon_e5_2660_v3_avx2.csv  results_intel_xeon_e5_2670_avx.csv  results_intel_xeon_e5_2690_avx.csv  results_intel_xeon_e5_2699_v4_avx2.csv  results_intel_xeon_e_2244g_avx2.csv  results_intel_xeon_gold_6426y_avx_512f.csv  results_intel_xeon_x5560_sse4_2.csv  results_intel_xeon_x5650_sse4_2.csv  simd_levels_amd_ryzen_9_9950x3d_avx.csv  simd_levels_amd_ryzen_9_9950x3d_avx2.csv  simd_levels_amd_ryzen_9_9950x3d_avx512f.csv  simd_levels_amd_ryzen_9_9950x3d_scalar.csv  simd_levels_amd_ryzen_9_9950x3d_sse2.csv  simd_levels_amd_ryzen_9_9950x3d_sse4_2.csv
docs/: ADDING_FEATURES.md  ARCHITECTURE.md  BENCHMARKING.md  IFUNC_RESOLVERS.md
features/vector_add/: CMakeLists.txt  vector_add.c
features/vector_mul/: CMakeLists.txt  vector_mul.c
features/vector_sub/: CMakeLists.txt  vector_sub.c
include/: dynemit.h
include/dynemit/: core.h  err.h  vector_add.h  vector_mul.h  vector_sub.h
scripts/: build_feature_compare.sh  check_for_simd.sh  plot_benchmark.py  requirements.txt  run_feature_comparison.sh
src/: CMakeLists.txt  dynemit.c  dynemit_features.c
tests/: CMakeLists.txt  test_cpp_basic.cpp  test_cpp_features.cpp  test_cpp_resolver_macro.cpp  test_features.c  test_resolver_macro.c  test_thread_safe_detection.c  test_vector_ops.c
